--- a/styles/style.css
+++ b/styles/style.css
@@ -66,6 +66,11 @@ label[for="secret"] {
   border: 1px solid #fff;
   border-radius: 6px;
   background-color: transparent;
+  outline: none;
+}
+
+#level-up-form input:focus {
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 #level-up-form input[type="submit"] {
